# book_catalog_api

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/routers/: book_routers.py
app/core/: config.py
app/models/: book_model.py
app/repositories/: book_service.py
app/schemas/: book_schemas.py
tests/: conftest.py  test_books.py
