[project]
name = "book-catalog-api"
version = "0.1.0"
description = ""
authors = [
    {name = "MieleSantos",email = "mielesnts@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard]>=0.136.0,<0.137.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "sqlalchemy>=2.0.49,<3.0.0",
    "ruff (>=0.15.11,<0.16.0)",
    "isort (>=8.0.1,<9.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pytest (>=9.0.3,<10.0.0)",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"
include = ["app/**/*.py", "tests/**/*.py"]
exclude = [".cache", ".venv", "venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["app", "tests"]
skip = [".cache", ".venv", "venv", "__pycache__"]

[tool.taskipy.tasks]
install = "XDG_CACHE_HOME=$(pwd)/.cache POETRY_CACHE_DIR=$(pwd)/.cache/pypoetry VIRTUALENV_OVERRIDE_APP_DATA=$(pwd)/.cache/virtualenv poetry install"
test = "XDG_CACHE_HOME=$(pwd)/.cache POETRY_CACHE_DIR=$(pwd)/.cache/pypoetry VIRTUALENV_OVERRIDE_APP_DATA=$(pwd)/.cache/virtualenv pytest"
lint = "XDG_CACHE_HOME=$(pwd)/.cache POETRY_CACHE_DIR=$(pwd)/.cache/pypoetry VIRTUALENV_OVERRIDE_APP_DATA=$(pwd)/.cache/virtualenv ruff check app tests && XDG_CACHE_HOME=$(pwd)/.cache POETRY_CACHE_DIR=$(pwd)/.cache/pypoetry VIRTUALENV_OVERRIDE_APP_DATA=$(pwd)/.cache/virtualenv isort --check-only app tests"
format = "XDG_CACHE_HOME=$(pwd)/.cache POETRY_CACHE_DIR=$(pwd)/.cache/pypoetry VIRTUALENV_OVERRIDE_APP_DATA=$(pwd)/.cache/virtualenv isort app tests && XDG_CACHE_HOME=$(pwd)/.cache POETRY_CACHE_DIR=$(pwd)/.cache/pypoetry VIRTUALENV_OVERRIDE_APP_DATA=$(pwd)/.cache/virtualenv ruff check app tests --fix"
check = "task lint && task test"


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "taskipy (>=1.14.1,<2.0.0)"
]
